--- a/BudgetPlan2019/index.html
+++ b/BudgetPlan2019/index.html
@@ -12,6 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <link rel="icon" href="picture/HK$.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="picture/HK$.png" type="image/x-icon" />
 </head>
 
 <body class="is-preload">
