--- a/BudgetPlan2019/index.html
+++ b/BudgetPlan2019/index.html
@@ -87,7 +87,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
                     <header class="major">
-                        <h3><a href="landing.html" class="link">Tax</a></h3>
+                        <h3><a href="tax.html" class="link">Tax</a></h3>
                         <p>Ipsum dolor sit amet</p>
                     </header>
                 </article>
@@ -96,7 +96,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
                     <header class="major">
-                        <h3><a href="landing.html" class="link">Healthcare</a></h3>
+                        <h3><a href="health.html" class="link">Healthcare</a></h3>
                         <p>feugiat amet tempus</p>
                     </header>
                 </article>
@@ -105,7 +105,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
                     <header class="major">
-                        <h3><a href="landing.html" class="link">ELderly</a></h3>
+                        <h3><a href="elderly.html" class="link">ELderly</a></h3>
                         <p>Lorem etiam nullam</p>
                     </header>
                 </article>
@@ -114,7 +114,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
                     <header class="major">
-                        <h3><a href="landing.html" class="link">Social Workers</a></h3>
+                        <h3><a href="sow.html" class="link">Social Workers</a></h3>
                         <p>Nisl sed aliquam</p>
                     </header>
                 </article>
