--- a/BudgetPlan2019/tax.html
+++ b/BudgetPlan2019/tax.html
@@ -67,8 +67,9 @@
                         <h4><i>name and time</i></h4>
                     </header>
                     <p>Text goes here</p>
+                    <span class="image main"><a href="https://colab.research.google.com/github/hkbujourdmc/hkbujourdmc.github.io/blob/master/BudgetPlan2019/taxamount.ipynb"><img src="tax_dark.png" style="position:center"></img></a></span>
                     <ul class="actions">
-                        <li><a href="generic.html" class="button primary fit">View the original post in TYR website</a></li>
+                        <li><a href="generic.html" class="button primary fit">View this post in TYR website</a></li>
                         <li><a href="generic.html" class="button fit">Back to the main page</a></li>
                     </ul>
                 </div>
