--- a/BudgetPlan2019/health.html
+++ b/BudgetPlan2019/health.html
@@ -222,7 +222,8 @@
                         </div>
                     </div>
                     <p>
-                        text goes here
+                        The provided diagram shows data on budget allocation of Hospital Authority(HA) in yearly budget plan and actual spending starting from 2010 and till 2019. A glance at the graphs reveals that government actual overall spending never exceeds the budget plan, which makes both ends meet. On the contrary, the actual allocation of HA always surpass planned budget. As an overall trend, the percentage of HA allocation in overall budget remains between 9.92% to 11.67%.
+
                     </p>
 
                     <div class="data_page">
