--- a/BudgetPlan2019/sow.html
+++ b/BudgetPlan2019/sow.html
@@ -14,6 +14,8 @@
     <link rel="icon" href="picture/socialworker_icon.png" type="image/x-icon" />
     <link rel="shortcut icon" href="picture/socialworker_icon.png" type="image/x-icon" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <noscript>
+            <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 
 <body class="is-preload">
@@ -48,13 +50,13 @@
         <section id="banner" class="style2">
             <div class="inner">
                 <span class="image">
-								<img src="images/pic02.jpg" alt="" />
-							</span>
+                        <img src="images/pic07.jpg" alt="" />
+                    </span>
                 <header class="major">
-                    <h1>Social Workers</h1>
+                    <h1>Healthcare</h1>
                 </header>
                 <div class="content">
-                    <p>Intro</p>
+                    <p>The intro of healthcare topic goes here</p>
                 </div>
             </div>
         </section>
@@ -69,19 +71,97 @@
                         <h2>Title</h2>
                         <h4><i>name and time</i></h4>
                     </header>
-                    <p>Text</p>
-                    <ul class="actions">
-                        <li><a href="generic.html" class="button primary fit">View the original post in TYR website</a></li>
-                        <li><a href="generic.html" class="button fit">Back to the main page</a></li>
-                    </ul>
+                    <p>
+                        text goes here
+                    </p>
+                    <div class="data_page">
+                        <div class="data_content_box">
+                            <div class="data_content">
+                                <!--Chart of Medical-->
+                                <section class="Chart">
+                                    <div id="chart01" style="min-width:400px;height:400px"></div>
+                                    <script src="assets/js/sow_chart.js"></script>
+
+                                </section>
+                                <!--End of Medical -->
+                            </div>
+                        </div>
+                    </div>
+                    <p>
+                        text gose here
+                    </p>
+
+                    <div class="data_page">
+                        <div class="data_content_box">
+                            <div class="data_content">
+                                <!--Chart of Medical-->
+                                <section class="Chart">
+                                    <div id="chart02" style="min-width:400px;height:400px"></div>
+                                </section>
+                                <!--End of Medical -->
+                            </div>
+                        </div>
+                    </div>
+                    <p>
+                        text goes here
+                    </p>
+
+                    <div class="data_page">
+                        <div class="data_content_box">
+                            <div class="data_content">
+                                <!--Pie Chart of Redundant Personnel-->
+                                <section class="Chart">
+                                    <div id="Personnel" style="min-width:400px;height:400px"></div>
+                                    <script src="HealthCare/Personnel.js"></script>
+                                </section>
+                                <!--End of Redundant Personnel-->
+                            </div>
+                        </div>
+                    </div>
+                    <p>
+                        text goes here
+                    </p>
                 </div>
 
             </section>
 
+            <!-- Main -->
+            <div id="main">
+
+                <!-- One -->
+                <section id="one">
+                    <div class="inner">
+                        <header class="major">
+                            <h2>Title</h2>
+                            <h4><i>name and time</i></h4>
+                        </header>
+                        <p>Text</p>
+                        <ul class="actions">
+                            <li><a href="generic.html" class="button primary fit">View the original post in TYR website</a></li>
+                            <li><a href="generic.html" class="button fit">Back to the main page</a></li>
+                        </ul>
+                    </div>
+
+                    <p>
+                        text goes here
+                    </p>
+                    <div class="data_page">
+                        <div class="data_content_box">
+                            <div class="data_content">
+                                <!--Chart of HAAllocation-->
+                                <section class="Chart">
+                                    <div id="chart01" style="height: 300px; width: 100%;"></div>
+                                </section>
+                                <!--End of HA Allocation-->
+                            </div>
+                        </div>
+                    </div>
+                </section>
 
 
-            <!-- Three -->
-            <!-- <section id="three">
+
+                <!-- Three -->
+                <!-- <section id="three">
                 <div class="inner">
                     <p>by: </p>
                     <ul class="actions">
@@ -90,34 +170,35 @@
                 </div>
             </section> -->
 
+            </div>
+
+
+            <!-- Footer -->
+            <footer id="footer">
+                <div class="inner">
+                    <ul class="icons" style="margin-left: 40%;margin-right: 40%">
+                        <li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+                        <li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+                        <li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+                    </ul>
+                    <ul class="copyright" style="margin-left: 38%;margin-right: 40%">
+                        <li>&copy; Untitled</li>
+                        <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+                    </ul>
+                </div>
+            </footer>
+
         </div>
 
-
-        <!-- Footer -->
-        <footer id="footer">
-            <div class="inner">
-                <ul class="icons" style="margin-left: 40%;margin-right: 40%">
-                    <li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-                    <li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-                    <li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-                </ul>
-                <ul class="copyright" style="margin-left: 38%;margin-right: 40%">
-                    <li>&copy; Untitled</li>
-                    <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-                </ul>
-            </div>
-        </footer>
-
-    </div>
-
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+        <!-- Scripts -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/jquery.scrolly.min.js"></script>
+        <script src="assets/js/jquery.scrollex.min.js"></script>
+        <script src="assets/js/browser.min.js"></script>
+        <script src="assets/js/breakpoints.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
+        <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
 </body>
 
