--- a/BudgetPlan2019/sow.html
+++ b/BudgetPlan2019/sow.html
@@ -53,10 +53,10 @@
                         <img src="images/pic07.jpg" alt="" />
                     </span>
                 <header class="major">
-                    <h1>Healthcare</h1>
+                    <h1>Social Workers</h1>
                 </header>
                 <div class="content">
-                    <p>The intro of healthcare topic goes here</p>
+                    <p>The intro of social worker topic goes here</p>
                 </div>
             </div>
         </section>
