--- a/BudgetPlan2019/index.html
+++ b/BudgetPlan2019/index.html
@@ -75,7 +75,7 @@
                     </header>
                     <p>Basic Info going here</p>
                     <ul class="actions">
-                        <li><a href="landing.html" class="button next">Check out the highlight this year.</a></li>
+                        <li><a href="landing.html" class="button next">Highlight this year</a></li>
                     </ul>
                 </div>
             </section>
