--- a/BudgetPlan2019/index.html
+++ b/BudgetPlan2019/index.html
@@ -48,9 +48,9 @@
         <!-- Banner -->
         <section id="banner" class="major">
             <div class="inner">
-                <!-- <span class="image">
-					<img src="images/pic07.jpg" alt="" />
-				</span> -->
+                <span class="image">
+					<img src="picture/cityview.jpg" alt="" />
+				</span> 
                 <header class="major">
                     <h1>Hong Kong Budget Plan 2019-2020</h1>
                 </header>
