--- a/BudgetPlan2019/tax.html
+++ b/BudgetPlan2019/tax.html
@@ -69,7 +69,7 @@
                         <h4><i>name and time</i></h4>
                     </header>
                     <p>Text goes here</p>
-                    <span class="image main"><a href="https://colab.research.google.com/github/hkbujourdmc/hkbujourdmc.github.io/blob/master/BudgetPlan2019/tax_v2.ipynb"><img src="tax_light.png" style="position:center"></img></a></span>
+                    <span class="image main"><img src="tax_light.png" style="position:center"></img></span>
                     <ul class="actions">
                         <li><a href="generic.html" class="button primary fit">View this post in TYR website</a></li>
                         <li><a href="generic.html" class="button fit">Back to the main page</a></li>
