--- a/BudgetPlan2019/index.html
+++ b/BudgetPlan2019/index.html
@@ -102,7 +102,7 @@
                 </article>
                 <article>
                     <span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="picture/elderly.jpg" alt="" />
 									</span>
                     <header class="major">
                         <h3><a href="elderly.html" class="link">ELderly</a></h3>
