--- a/BudgetPlan2019/sow.html
+++ b/BudgetPlan2019/sow.html
@@ -198,7 +198,7 @@
         <script src="assets/js/breakpoints.min.js"></script>
         <script src="assets/js/util.js"></script>
         <script src="assets/js/main.js"></script>
-        <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+        <script src="assets/js/canvasjs.min.js"></script>
 
 </body>
 
