--- a/BudgetPlan2019/sow.html
+++ b/BudgetPlan2019/sow.html
@@ -158,10 +158,11 @@
                     </div>
                 </section>
 
+                <div>
+                    <img>
 
-
-                <!-- Three -->
-                <!-- <section id="three">
+                    <!-- Three -->
+                    <!-- <section id="three">
                 <div class="inner">
                     <p>by: </p>
                     <ul class="actions">
@@ -170,35 +171,37 @@
                 </div>
             </section> -->
 
+
+
+                </div>
+
+
+                <!-- Footer -->
+                <footer id="footer">
+                    <div class="inner">
+                        <ul class="icons" style="margin-left: 40%;margin-right: 40%">
+                            <li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+                            <li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+                            <li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+                        </ul>
+                        <ul class="copyright" style="margin-left: 38%;margin-right: 40%">
+                            <li>&copy; Untitled</li>
+                            <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+                        </ul>
+                    </div>
+                </footer>
+
             </div>
 
-
-            <!-- Footer -->
-            <footer id="footer">
-                <div class="inner">
-                    <ul class="icons" style="margin-left: 40%;margin-right: 40%">
-                        <li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-                        <li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-                        <li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-                    </ul>
-                    <ul class="copyright" style="margin-left: 38%;margin-right: 40%">
-                        <li>&copy; Untitled</li>
-                        <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-                    </ul>
-                </div>
-            </footer>
-
-        </div>
-
-        <!-- Scripts -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/jquery.scrolly.min.js"></script>
-        <script src="assets/js/jquery.scrollex.min.js"></script>
-        <script src="assets/js/browser.min.js"></script>
-        <script src="assets/js/breakpoints.min.js"></script>
-        <script src="assets/js/util.js"></script>
-        <script src="assets/js/main.js"></script>
-        <script src="assets/js/canvasjs.min.js"></script>
+            <!-- Scripts -->
+            <script src="assets/js/jquery.min.js"></script>
+            <script src="assets/js/jquery.scrolly.min.js"></script>
+            <script src="assets/js/jquery.scrollex.min.js"></script>
+            <script src="assets/js/browser.min.js"></script>
+            <script src="assets/js/breakpoints.min.js"></script>
+            <script src="assets/js/util.js"></script>
+            <script src="assets/js/main.js"></script>
+            <script src="assets/js/canvasjs.min.js"></script>
 
 </body>
 
