--- a/BudgetPlan2019/index.html
+++ b/BudgetPlan2019/index.html
@@ -111,7 +111,7 @@
                 </article>
                 <article>
                     <span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="picture/socialWork.jpg" alt="" />
 									</span>
                     <header class="major">
                         <h3><a href="sow.html" class="link">Social Workers</a></h3>
