--- a/BudgetPlan2019/index.html
+++ b/BudgetPlan2019/index.html
@@ -84,7 +84,7 @@
             <section id="one" class="tiles">
                 <article>
                     <span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="picture/tax.jpg" alt="" />
 									</span>
                     <header class="major">
                         <h3><a href="tax.html" class="link">Tax</a></h3>
@@ -93,7 +93,7 @@
                 </article>
                 <article>
                     <span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="picture/health.jpg" alt="" />
 									</span>
                     <header class="major">
                         <h3><a href="health.html" class="link">Healthcare</a></h3>
