--- a/BudgetPlan2019/sow.html
+++ b/BudgetPlan2019/sow.html
@@ -111,8 +111,12 @@
                             <div class="data_content">
                                 <!--Pie Chart of Redundant Personnel-->
                                 <section class="Chart">
-                                    <div id="Personnel" style="min-width:400px;height:400px"></div>
-                                    <script src="HealthCare/Personnel.js"></script>
+                                    <div class="contatainer"></div>
+                                    <img src="picture/Hong Kong.png" alt="Ratio of social workers to students in Hong Kong" style="width: 45%; clear: right">
+                                    <img src="picture/Japan.png" alt="Ratio of social workers to students in Japan" style="width: 45%; float: right">
+                                    <br><br>
+                                    <img src="picture/USA.png" alt="Ratio of social workers to students in the United States" style="width: 45%; clear: right">
+                                    <img src="picture/singapore.png" alt="Ratio of social workers to students in Singapore" style="width: 45%; float: right">
                                 </section>
                                 <!--End of Redundant Personnel-->
                             </div>
@@ -127,54 +131,6 @@
 
             <!-- Main -->
             <div id="main">
-
-                <!-- One -->
-                <section id="one">
-                    <div class="inner">
-                        <header class="major">
-                            <h2>Title</h2>
-                            <h4><i>name and time</i></h4>
-                        </header>
-                        <p>Text</p>
-                        <ul class="actions">
-                            <li><a href="generic.html" class="button primary fit">View the original post in TYR website</a></li>
-                            <li><a href="generic.html" class="button fit">Back to the main page</a></li>
-                        </ul>
-                    </div>
-
-                    <p>
-                        text goes here
-                    </p>
-                    <div class="data_page">
-                        <div class="data_content_box">
-                            <div class="data_content">
-                                <!--Chart of HAAllocation-->
-                                <section class="Chart">
-                                    <div id="chart01" style="height: 300px; width: 100%;"></div>
-                                </section>
-                                <!--End of HA Allocation-->
-                            </div>
-                        </div>
-                    </div>
-                </section>
-
-                <div>
-                    <img>
-
-                    <!-- Three -->
-                    <!-- <section id="three">
-                <div class="inner">
-                    <p>by: </p>
-                    <ul class="actions">
-                        <li><a href="generic.html" class="button next">View the original post in TYR website</a></li>
-                    </ul>
-                </div>
-            </section> -->
-
-
-
-                </div>
-
 
                 <!-- Footer -->
                 <footer id="footer">
@@ -202,7 +158,6 @@
             <script src="assets/js/util.js"></script>
             <script src="assets/js/main.js"></script>
             <script src="assets/js/canvasjs.min.js"></script>
-
 </body>
 
 </html>
