--- a/BudgetPlan2019/health.html
+++ b/BudgetPlan2019/health.html
@@ -182,7 +182,7 @@
         <section id="banner" class="style2">
             <div class="inner">
                 <span class="image">
-                    <img src="images/pic07.jpg" alt="" />
+                    <img src="picture/branchImage/healthCare.jpg" alt="" />
                 </span>
                 <header class="major">
                     <h1>Healthcare</h1>
