--- a/BudgetPlan2019/tax.html
+++ b/BudgetPlan2019/tax.html
@@ -47,7 +47,7 @@
         <section id="banner" class="style2">
             <div class="inner">
                 <span class="image">
-								<img src="images/pic08.jpg" alt="" />
+								<img src="picture/branchImage/Tax.jpg" alt="" />
 							</span>
                 <header class="major">
                     <h1>Tax</h1>
