--- a/BudgetPlan2019/elderly.html
+++ b/BudgetPlan2019/elderly.html
@@ -51,7 +51,7 @@
         <section id="banner" class="style2">
             <div class="inner">
                 <span class="image">
-								<img src="images/pic06.jpg" alt="" />
+								<img src="picture/branchImage/elderly.jpg" alt="" />
 							</span>
                 <header class="major">
                     <h1>Elderly</h1>
