--- a/BudgetPlan2019/sow.html
+++ b/BudgetPlan2019/sow.html
@@ -50,14 +50,11 @@
         <section id="banner" class="style2">
             <div class="inner">
                 <span class="image">
-                        <img src="picture/branchImage/socialWork.jpg" alt="" />
+                        <img src="images/pic07.jpg" alt="" />
                     </span>
                 <header class="major">
                     <h1>Social Workers</h1>
                 </header>
-                <div class="content">
-                    <p>The intro of social worker topic goes here</p>
-                </div>
             </div>
         </section>
 
@@ -67,43 +64,20 @@
             <!-- One -->
             <section id="one">
                 <div class="inner">
+
                     <header class="major">
-                        <h2>Title</h2>
-                        <h4><i>name and time</i></h4>
+                        <h2>Government increases amount of professional school social workers </h2>
+                        <h4><i>Reported by Cara Li, Oasis Li & Wallis Wang
+                            <br>Edited by Katherine Li</i></h4>
                     </header>
-                    <p>
-                        text goes here
-                    </p>
-                    <div class="data_page">
-                        <div class="data_content_box">
-                            <div class="data_content">
-                                <!--Chart of Medical-->
-                                <section class="Chart">
-                                    <div id="chart01" style="min-width:400px;height:400px"></div>
-                                    <script src="assets/js/sow_chart.js"></script>
 
-                                </section>
-                                <!--End of Medical -->
-                            </div>
-                        </div>
-                    </div>
                     <p>
-                        text gose here
-                    </p>
-
-                    <div class="data_page">
-                        <div class="data_content_box">
-                            <div class="data_content">
-                                <!--Chart of Medical-->
-                                <section class="Chart">
-                                    <div id="chart02" style="min-width:400px;height:400px"></div>
-                                </section>
-                                <!--End of Medical -->
-                            </div>
-                        </div>
-                    </div>
-                    <p>
-                        text goes here
+                        The government will ensure at least two social workers in all secondary schools across Hong Kong starting this year, announced Financial Secretary Paul Chan Mo-po in the budget speech today. This comes after an alarming increase in student suicide rates
+                        and teenage mental illness.
+                        <br> This “two school social workers for each school” policy will involve an annual recurring expenditure of $310 million and will be implemented in more than 460 secondary schools.
+                        <br> Mr. Chan said in the budget speech that the objective of this policy is “to enhance teenagers’ mental health and stress resilience”.
+                        <br> Currently, middle schools in Hong Kong are administering the “one school social worker for each school” policy, which was introduced to all secondary schools in 2000.
+                        <br> But statistics and surveys show that the mental health assistance currently offered to secondary school students is far from adequate.
                     </p>
 
                     <div class="data_page">
@@ -122,9 +96,62 @@
                             </div>
                         </div>
                     </div>
+
                     <p>
-                        text goes here
+                        <br> Based on a statement from the Food and Health Bureau, more and more teenagers and even pre-teens have been diagnosed with mental illness in recent years. The number of cases has risen from 18,900 in 2012 to 28,800 in 2016
+                        — an increase of more than 50% in five years.
+                        <br> The juvenile suicide rate in Hong Kong also rose rapidly. HKJC Centre for Suicide Research and Prevention from Hong Kong University estimated that the suicide rate has increased by 76.1% from 2012 to 2016, while the suicide
+                        cases of full-time students have risen by 52.6%.
                     </p>
+
+                    <div class="data_page">
+                        <div class="data_content_box">
+                            <div class="data_content">
+                                <!--Chart of Medical-->
+                                <section class="Chart">
+                                    <div id="chart01" style="min-width:400px;height:400px"></div>
+                                    <script src="assets/js/sow_chart.js"></script>
+
+                                </section>
+                                <!--End of Medical -->
+                            </div>
+                        </div>
+                    </div>
+
+                    <p>
+                        <br> “Allocating more social workers to schools definitely can help to provide early detection and intervention to students who might be in distress or have high risks of mental health issues,” said Frances Law Yik-wa, associate
+                        professor at Hong Kong University and Project Director of CSRP, who responded positively towards the government’s new policy.
+                        <br> However, while the government’s efforts are appreciated, local social worker Emy Law Yee-ming who is also a member of the Reclaiming Social Work Movement expressed her concerns towards this policy change.
+                        <br> “I am concerned about the workload of the social workers and also if the schools have enough resources to assist their work,” said Ms. Law. “If the number of school social workers are doubled, will the number of supervisors
+                        who provide help to students also be doubled?”
+                        <br> She also said that helping students should always be prioritised before meeting the working quota.
+                        <br> “For example, one social worker has to deal with 70 cases annually. After adding one more social worker, I am afraid that they are going to double the case quota as well. But the point is, more actual space and time should
+                        be provided to lend students a helping hand,” said Ms. Law.
+                    </p>
+
+                    <div class="data_page">
+                        <div class="data_content_box">
+                            <div class="data_content">
+                                <!--Chart of Medical-->
+                                <section class="Chart">
+                                    <div id="chart02" style="min-width:400px;height:400px"></div>
+                                </section>
+                                <!--End of Medical -->
+                            </div>
+                        </div>
+                    </div>
+
+                    <p>
+                        <br> Her concerns are also echoed by Paul Wong Wai-ching, associate professor at the University of Hong Kong and former national representative of the International Association for Suicide Prevention.
+                        <br> “Serving one student actually means serving a whole family. If you are helping one student, you are helping three people — the student and his or her parents,” said Dr. Wong.
+                        <br> To alleviate the stress placed on social workers, both Dr. Wong and Ms. Law agreed that professionals besides social workers can help to diminish students’ mental health problems.
+                        <br> Dr. Wong suggested that the government should start recognising counsellors’ qualification and hire them as well. He pointed out that there are people who took counselling courses but do not have psychology backgrounds, and
+                        that many countries around the world recognise these counsellors.
+                        <br> Dr. Wong’s said parents and peers play important roles in mental health as well.
+                        <br> “Young people often seek help from peers rather than professionals. Students themselves can be trained up to help their peers, for example, taking up a post an an ambassador at school,” he said.
+                        <br> “We expect the government will continue to provide resources to empower schools in strengthening their curriculum in this aspect,” said Dr. Law.
+                    </p>
+
                 </div>
 
             </section>
