--- a/BudgetPlan2019/index.html
+++ b/BudgetPlan2019/index.html
@@ -50,13 +50,13 @@
             <div class="inner">
                 <span class="image">
 					<img src="picture/cityview.jpg" alt="" />
-				</span> 
+				</span>
                 <header class="major">
                     <h1>Hong Kong Budget Plan 2019-2020</h1>
                 </header>
                 <div class="content">
                     <p>Collaboration between <a href="http://tyr.jour.hkbu.edu.hk/">The Young Reporter</a> and
-                        <br/> <a href="">Data and Media Communication Team</a><br/><br/>***change the background image*** </p>
+                        <br/> <a href="http://bu-dmc.hkbu.edu.hk/">Data and Media Communication Team</a><br/><br/>***change the background image*** </p>
                     <ul class="actions">
                         <li><a href="#one" class="button next scrolly">Get Started</a></li>
                     </ul>
@@ -208,9 +208,9 @@
             <div class="inner">
                 <ul class="icons" style="margin-left: 40%;margin-right: 40%">
                     <!-- <li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li> -->
-                    <li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-                    <li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-                    <li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+                    <li><a href="https://www.facebook.com/hkbutyr/" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+                    <li><a href="https://www.instagram.com/hkbutyr/" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+                    <li><a href="https://github.com/hkbujourdmc/hkbujourdmc.github.io" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
                 </ul>
                 <ul class="copyright" style="margin-left: 38%;margin-right: 40%">
                     <li>&copy; Untitled</li>
