--- a/BudgetPlan2019/index.html
+++ b/BudgetPlan2019/index.html
@@ -56,7 +56,7 @@
                 </header>
                 <div class="content">
                     <p>Collaboration between <a href="http://tyr.jour.hkbu.edu.hk/">The Young Reporter</a> and
-                        <br/> <a href="">Data and Media Communication Team</a><br/><br/>***change the background image*** </p>
+                        <br/> <a href="">Data and Media Communication Team</a>
                     <ul class="actions">
                         <li><a href="#one" class="button next scrolly">Get Started</a></li>
                     </ul>
@@ -142,10 +142,14 @@
             <section id="two">
                 <div class="inner">
                     <header class="major">
-                        <h2>Info abt the project</h2>
+                        <h2>About this project</h2>
                     </header>
-                    <p>Introduce TYR, DMC and the members involved<br/>add contact information</p>
-                </div>
+                    <p>The project is conducted by TYR and DMC.
+			<br>The Young Reporter (TYR) is an English news publication produced by international journalism students at Hong Kong Baptist University. It started as a printed magazine in 1969. Today, TYR is produced across different platforms.</p>
+               		<br>Email:tyrmagazine@gmail.com
+			<br>Data and Media Communication students will showcase advanced data analysis and journalism skills to be the effective storyteller in this collection.
+		    <br>Email:hkbudmc@gmail.com
+		    </div>
             </section>
 
         </div>
