--- a/BudgetPlan2019/index.html
+++ b/BudgetPlan2019/index.html
@@ -155,9 +155,10 @@
                         <h2>About this project</h2>
                     </header>
                     <p>The project is conducted by TYR and DMC.
+			    <br>
 			<br>The Young Reporter (TYR) is an English news publication produced by international journalism students at Hong Kong Baptist University.
                		<br>Email:tyrmagazine@gmail.com</p>
-			<br>Data and Media Communication students will showcase advanced data analysis and journalism skills to be the effective storyteller in this collection.
+			Data and Media Communication students will showcase advanced data analysis and journalism skills to be the effective storyteller in this collection.
 		    <br>Email:hkbudmc@gmail.com
 		    </div>
             </section>
