--- a/BudgetPlan2019/index.html
+++ b/BudgetPlan2019/index.html
@@ -83,7 +83,7 @@
                     <header class="major">
                         <h2>Budget Plan</h2>
                     </header>
-                    <p>Basic Info going here</p>
+                    <p>For this year’s budget, Financial Secretary Paul Chan Mo-po announced a myriad of policies to improve the wellbeing of Hong Kong people despite decreased revenue. He injected $80 billion to address the labour shortage crisis in public hospitals and increased elderly daycare centres. Mr. Chan further ensured the allocation of at least 2 social workers in all secondary schools across Hong Kong in face of high number of student suicide cases. However, some are still concerned whether the policies raised will be effective. Here are what different voices have said about the 2019/20 budget.</p>
                     <ul class="actions">
                         <li><a href="landing.html" class="button next">Highlight this year</a></li>
                     </ul>
