--- a/BudgetPlan2019/index.html
+++ b/BudgetPlan2019/index.html
@@ -47,7 +47,6 @@
                 <li><a href="health.html" class="button fit">Health</a></li>
                 <li><a href="elderly.html" class="button fit">Elderly</a></li>
                 <li><a href="sow.html" class="button fit">Social Workers</a></li>
-                <li><a href="elements.html" class="button fit">Elements</a></li>
             </ul>
             <!-- <ul class="actions stacked">
                 <li><a href="#" class="button primary fit">Get Started</a></li>
@@ -156,9 +155,9 @@
                     </header>
                     <p>The project is conducted by TYR and DMC.
 			    <br>
-			<br>The Young Reporter (TYR) is an English news publication produced by international journalism students at Hong Kong Baptist University.
+			<br><b>The Young Reporter (TYR) </b>is an English news publication produced by international journalism students at Hong Kong Baptist University.
                		<br>Email:tyrmagazine@gmail.com</p>
-			Data and Media Communication students will showcase advanced data analysis and journalism skills to be the effective storyteller in this collection.
+			<b>Data and Media Communication students</b> will showcase advanced data analysis and journalism skills to be the effective storyteller in this collection.
 		    <br>Email:hkbudmc@gmail.com
 		    </div>
             </section>
@@ -223,9 +222,9 @@
             <div class="inner">
                 <ul class="icons" style="margin-left: 40%;margin-right: 40%">
                     <!-- <li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li> -->
-                    <li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-                    <li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-                    <li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+                    <li><a href="https://www.facebook.com/hkbutyr/" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+                    <li><a href="https://www.instagram.com/hkbutyr/" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+                    <li><a href="https://github.com/hkbujourdmc" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
                 </ul>
                 <ul class="copyright" style="margin-left: 38%;margin-right: 40%">
                     <li>&copy; Untitled</li>
