--- a/BudgetPlan2019/tax.html
+++ b/BudgetPlan2019/tax.html
@@ -327,7 +327,7 @@
                                     <img class="pic_one" src="./picture/student.png" alt="">
                                 </div>
                                 <div class="button_img">
-                                    <img class="pic_two" src="./picture/Worker.png" alt="">
+                                    <img class="pic_two" src="./picture/worker.png" alt="">
                                 </div>
                                 <div class="button_img">
                                     <img class="pic_three" src="./picture/1elderly.png" alt="">
