delete so-called brif intro

--- a/BudgetPlan2019/tax.html
+++ b/BudgetPlan2019/tax.html
@@ -170,9 +170,9 @@
                 <header class="major">
                     <h1>Tax</h1>
                 </header>
-                <div class="content">
+                <!-- <div class="content">
                     <p>Brief intro</p>
-                </div>
+                </div> -->
             </div>
         </section>
 
