--- a/BudgetPlan2019/tax.html
+++ b/BudgetPlan2019/tax.html
@@ -183,7 +183,7 @@
             <section id="one">
                 <div class="inner">
                     <header class="major">
-                        <h2>19/20 Budget: Tax reduction and financial relief measures not to be compromised despite lower revenue</h2>
+                        <h2>19/20 Budget: Tax reduction and financial relief <br/>measures not to be compromised despite lower revenue</h2>
                         <h4><i>Reported by Jo Ng, King Woo, Vimvam Tong and Yetta Lam<br/>
                             Edited by Rachel Yeo<br/>
                             Graphics by Bonnie Yu and Brittany Wang
