--- a/BudgetPlan2019/index.html
+++ b/BudgetPlan2019/index.html
@@ -69,9 +69,9 @@
                 <div class="content">
                     <p>Collaboration between <a href="http://tyr.jour.hkbu.edu.hk/">The Young Reporter</a> and
 
-                        <br/> <a href="http://bu-dmc.hkbu.edu.hk/">Data and Media Communication Team</a><br/><br/>***change the background image*** </p>
+                        <br/> <a href="http://bu-dmc.hkbu.edu.hk/">Data and Media Communication Team</a><br/><br/></p>
 
-                    <br/> <a href="">Data and Media Communication Team</a>
+                    <!-- <br/> <a href="">Data and Media Communication Team</a> -->
 
                     <ul class="actions">
                         <li><a href="#one" class="button next scrolly">Get Started</a></li>
