--- a/BudgetPlan2019/index.html
+++ b/BudgetPlan2019/index.html
@@ -162,12 +162,12 @@
                     <header class="major">
                         <h2>About this project</h2>
                     </header>
-                    <p>The project is conducted by TYR and DMC.
+                    <p>The project is conducted by all TYR reporters and editors and DMC team (Alec Gu, Bonnie Yu, Kelly Zhao, Brittany Wang, Judy Li, Jack Lung, Rhona Lyu).
                         <br>
                         <br><b>The Young Reporter (TYR) </b>is an English news publication produced by international journalism students at Hong Kong Baptist University.
                         <br>Email: <a href="mailto:tyrmagazine@gmail.com">tyrmagazine@gmail.com</a></p>
-                    <b>Data and Media Communication students</b> will showcase advanced data analysis and journalism skills to be the effective storyteller in this collection.
-                    <br>Email: <a href="mailto:hkbudmc@gmail.com">hkbudmc@gmail.com.com</a>
+                    <b>Data and Media Communication team</b> will showcase advanced data analysis and journalism skills to be the effective storyteller in this collection.
+                    <br>Email: <a href="mailto:hkbudmc@gmail.com">hkbudmc@gmail.com</a>
                 </div>
             </section>
 
