add section highlight

--- a/BudgetPlan2019/index.html
+++ b/BudgetPlan2019/index.html
@@ -46,6 +46,7 @@
         <nav id="menu">
             <ul class="links">
                 <li><a href="index.html" class="button fit">Home</a></li>
+                <li><a href="highlight.html" class="button fit">Highlight</a></li>
                 <li><a href="tax.html" class="button fit">Tax</a></li>
                 <li><a href="health.html" class="button fit">Health</a></li>
                 <li><a href="elderly.html" class="button fit">Elderly</a></li>
