--- a/BudgetPlan2019/sow.html
+++ b/BudgetPlan2019/sow.html
@@ -36,6 +36,7 @@
         <nav id="menu">
             <ul class="links">
                 <li><a href="index.html" class="button fit">Home</a></li>
+                <li><a href="highlight.html" class="button fit">Highlight</a></li>
                 <li><a href="tax.html" class="button fit">Tax</a></li>
                 <li><a href="health.html" class="button fit">Health</a></li>
                 <li><a href="elderly.html" class="button fit">Elderly</a></li>
@@ -65,7 +66,7 @@
                 <div class="inner">
 
                     <header class="major">
-                        <h2>Government increases amount of professional school social workers </h2>
+                        <h2>Budget 2019/20: Government increases amount of professional school social workers </h2>
                         <h4><i>Reported by Cara Li, Oasis Li & Wallis Wang
                             <br>Edited by Katherine Li</i></h4>
                     </header>
