--- a/BudgetPlan2019/tax.html
+++ b/BudgetPlan2019/tax.html
@@ -152,6 +152,7 @@
         <nav id="menu">
             <ul class="links">
                 <li><a href="index.html" class="button fit">Home</a></li>
+                <li><a href="highlight.html" class="button fit">Highlight</a></li>
                 <li><a href="tax.html" class="button fit">Tax</a></li>
                 <li><a href="health.html" class="button fit">Health</a></li>
                 <li><a href="elderly.html" class="button fit">Elderly</a></li>
@@ -182,7 +183,7 @@
             <section id="one">
                 <div class="inner">
                     <header class="major">
-                        <h2>19/20 Budget: Tax reduction and financial relief <br/>measures not to be compromised despite lower revenue</h2>
+                        <h2>Budget 2019/20: Tax reduction and financial relief <br/>measures not to be compromised despite lower revenue</h2>
                         <h4><i>Reported by Jo Ng, King Woo, Vimvam Tong and Yetta Lam<br/>
                             Edited by Rachel Yeo<br/>
                             Graphics by Bonnie Yu and Brittany Wang
