--- a/BudgetPlan2019/elderly.html
+++ b/BudgetPlan2019/elderly.html
@@ -153,12 +153,17 @@
         <footer id="footer">
             <div class="inner">
                 <ul class="icons" style="margin-left: 40%;margin-right: 40%">
-                    <li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-                    <li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-                    <li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+                    <!-- <li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li> -->
+                    <li><a href="https://www.facebook.com/hkbutyr/" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+                    <li><a href="https://www.instagram.com/hkbutyr/" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+
+                    <li><a href="https://github.com/hkbujourdmc/hkbujourdmc.github.io" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+
+                    <li><a href="https://github.com/hkbujourdmc" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+
                 </ul>
                 <ul class="copyright" style="margin-left: 38%;margin-right: 40%">
-                    <li>&copy; Untitled</li>
+                    <li>&copy; 2019</li>
                     <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
                 </ul>
             </div>
