--- a/BudgetPlan2019/index.html
+++ b/BudgetPlan2019/index.html
@@ -94,7 +94,7 @@
                         hospitals and increased elderly daycare centres. Mr. Chan further ensured the allocation of at least 2 social workers in all secondary schools across Hong Kong in face of high number of student suicide cases. However, some are
                         still concerned whether the policies raised will be effective. Here are what different voices have said about the 2019/20 budget.</p>
                     <ul class="actions">
-                        <li><a href="landing.html" class="button next">Highlight this year</a></li>
+                        <li><a href="highlight.html" class="button next">Highlight this year</a></li>
                     </ul>
                 </div>
             </section>
@@ -237,7 +237,7 @@
 
                     <li><a href="https://github.com/hkbujourdmc/hkbujourdmc.github.io" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 
-                          </ul>
+                </ul>
                 <ul class="copyright" style="margin-left: 38%;margin-right: 40%">
                     <li>&copy; 2019</li>
                     <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
