--- a/BudgetPlan2019/index.html
+++ b/BudgetPlan2019/index.html
@@ -163,7 +163,9 @@
                     <header class="major">
                         <h2>About this project</h2>
                     </header>
-                    <p>The project is conducted by all TYR reporters and editors and DMC team (Alec Gu, Bonnie Yu, Kelly Zhao, Brittany Wang, Judy Li, Jack Lung, Rhona Lyu).
+                    <p>The project is conducted by 
+			<br>All TYR reporters and editors,
+			<br>DMC team: Alec Gu, Bonnie Yu, Kelly Zhao, Brittany Wang, Judy Li, Jack Lung, Rhona Lyu.
                         <br>
                         <br><b>The Young Reporter (TYR) </b>is an English news publication produced by international journalism students at Hong Kong Baptist University.
                         <br>Email: <a href="mailto:tyrmagazine@gmail.com">tyrmagazine@gmail.com</a></p>
